--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.google.android.gms:play-services-drive:11.8.0"
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.google.maps:google-maps-services:0.2.6'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
+
 }
