--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.android.gms:play-services-plus:11.8.0'
+    implementation 'com.google.firebase:firebase-ads:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -46,3 +47,6 @@ dependencies {
     compile 'org.slf4j:slf4j-nop:1.7.25'
 
 }
+
+
+apply plugin: 'com.google.gms.google-services'
