--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             </intent-filter
             -->
         </activity>
+        <activity android:name=".ImpressumActivity"></activity>
     </application>
 
 </manifest>
